# RTCollisionDetection

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.bat  benchmark.sh  config.h.in  requirements.txt
RTCD/: CMakeLists.txt
RTCD/Benchmark/: CMakeLists.txt
RTCD/Benchmark/Curve/: CMakeLists.txt  benchmark.cpp  benchmarkUtils.h
RTCD/Benchmark/Discrete/: CMakeLists.txt  benchmark.cpp  benchmarkUtils.h
RTCD/CollisionDetector/: BBCollisionDetection.cu  BBCollisionDetection.cuh  CCCuda.cu  CCRay.cu  CCRobotWrapper.h  CMakeLists.txt  CollisionDetector.h  launchParameters.h  threadPool.h
RTCD/CollisionDetector/Test/: CCTestUtils.h  testBinarySearch.cu  testCollisionCheckerCurve.cpp  testCollisionDetectionOBB.cpp
RTCD/CollisionScenes/: CMakeLists.txt  baseBatchScene.h  batchScene.h  batchSceneConfig.h  obstacle.h  scene.h  sceneKern.cu  sceneKern.cuh
RTCD/CollisionScenes/Scene/: debugBox.h  denseShelf.h  sceneBuilder.h  shelf.h  shelfSimple.h
RTCD/CollisionScenes/Test/: testBatchScene.cpp  testObstacle.cpp  testScene.cpp
RTCD/Demo/: CMakeLists.txt  DemoCollisionDetectorCurve.cpp  DemoCollisionDetectorDisc.cpp
RTCD/Meshes/: CMakeLists.txt  Obb.h  mesh.h  meshTypes.h
RTCD/Meshes/Test/: testModelLoader.cpp  testOBB.cpp
RTCD/Planner/: constant.h
RTCD/Planner/KNN/: knn.h  knnCUDA.cu  knnCUDA.h
RTCD/Planner/Test/: testKNN.cpp  testSampler.cpp
RTCD/Planner/sampler/: sampler.h
RTCD/Robot/: CMakeLists.txt  baseBatchRobot.h  batchCurveRobot.h  batchGASRobot.h  batchIASRobot.h  batchRayRobot.h  batchRobotConfig.h  meshUtils.h  robot.cu  robot.cuh  robot.h  robotConfig.h  streamRobot.h  sweptVolume.cu  sweptVolume.cuh  sweptVolume.inl
RTCD/Robot/Test/: batchCurveRobotTest.cpp  batchGASRobotTest.cpp  batchIASRobotTest.cpp  batchRayRobotTest.cpp  robotFkineTest.cpp  robotTest.cpp
RTCD/Robot/models/: panda.h  pandas.h
RTCD/Utils/: ArrayMath.h  CMakeLists.txt  CUDABuffer.h  CUDAMacro.h  Matrix.h  OptiXIRUtils.h  Preprocessor.h  cuUtils.cuh  optix7.h
RTCD/Utils/Test/: IOUtils.h  cudaCtxUtils.h  poseUtils.h  testUtils.h
RTCD/Utils/Test/src/: testCUDABuffer.cpp  testContext.cpp  testExclusiveScan.cpp  testMotionGen.cpp  testReduce.cpp  testSelect.cu  testStreamCompact.cpp
RTCD/Utils/cuda/: cudaAlgorithms.cu  cudaAlgorithms.cuh  reduce.inl  streamCompact.inl  transform.inl
RTCD/data/weights/cubic/normal/: 16_128.txt  16_32.txt  16_64.txt  32_128.txt  32_64.txt  4_128.txt  4_16.txt  4_32.txt  4_64.txt  4_8.txt  8_128.txt  8_16.txt  8_32.txt  8_64.txt
RTCD/data/weights/cubic/repeated/: 16_128.txt  16_32.txt  16_64.txt  32_128.txt  32_64.txt  4_128.txt  4_16.txt  4_32.txt  4_64.txt  4_8.txt  8_128.txt  8_16.txt  8_32.txt  8_64.txt
RTCD/data/weights/quad/normal/: 16_128.txt  16_32.txt  16_64.txt  32_128.txt  32_64.txt  3_6.txt  4_128.txt  4_16.txt  4_32.txt  4_64.txt  4_8.txt  5_10.txt  6_12.txt  7_14.txt  8_128.txt  8_16.txt  8_32.txt  8_64.txt
RTCD/data/weights/quad/repeated/: 16_128.txt  16_32.txt  16_64.txt  32_128.txt  32_64.txt  3_6.txt  4_128.txt  4_16.txt  4_32.txt  4_64.txt  4_8.txt  5_10.txt  6_12.txt  7_14.txt  8_128.txt  8_16.txt  8_32.txt  8_64.txt
cmake/: CUDA_Macros.cmake  FindOptiX.cmake  configCompilerFlags.cmake  configure_tiny_obj_loader.cmake
docs/: Benchmark.md  How-to-New-Robot.md
models/franka_description/: modified_panda.urdf  panda.urdf  pandaWithSphere.urdf
models/franka_description/spheres/: panda_link0.txt  panda_link1.txt  panda_link2.txt  panda_link3.txt  panda_link4.txt  panda_link5.txt  panda_link6.txt  panda_link7.txt
scripts/: Manifest.toml  Project.toml  urdf_parser.py
scripts/Benchmark/curobo/: curobo_continuous_benchmark.py  curobo_discrete_benchmark.py
scripts/Benchmark/plots/curve/: resultAnalysisEff.jl  resultAnalysisUtils.jl
scripts/Benchmark/plots/discrete/: resultAnalysis.jl  resultAnalysisUtils.jl
scripts/URDFParser/: meshToSphere.ipynb  sphereGenUtils.py  urdfParserUtils.py  urdf_formatter.py  urdf_parser.py
